Add remaining figures

--- a/figures/figures_batch_effects.ipynb
+++ b/figures/figures_batch_effects.ipynb
@@ -163,7 +163,7 @@
     "utils.plot(pancreas[\"embedding\"], pancreas[\"source\"], ax=ax[1], s=3, title=\"Batch effect: Pancreas\",\n",
     "           legend_kwargs=dict(loc=\"upper center\", bbox_to_anchor=(0.5, 0.025), bbox_transform=ax[1].transAxes, ncol=2))\n",
     "\n",
-    "#plt.savefig(\"batch_effect.pdf\", dpi=600, bbox_inches=\"tight\", transparent=True)"
+    "plt.savefig(\"batch_effect.pdf\", dpi=600, bbox_inches=\"tight\", transparent=True)"
    ]
   },
   {
